Update code for better page handling and server configuration
This commit includes changes mainly regarding improved page handling and some server configuration updates. It modifies the way pages are handled, especially for bot services and also brings changes in various server configurations and associated URLs for more efficient operations. The commit also introduces corresponding docker configuration files for certain services.